--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats-service/stats-server
-    image: stats-server
+    build: ./stats-service/stats-server
     container_name: stats-server
     ports:
       - "9090:9090"
@@ -26,8 +25,7 @@ services:
       - TZ=GMT
 
   ewm-service:
-    build: main-service
-    image: main-service
+    build: ./main-service
     container_name: main-service
     ports:
       - "8080:8080"
@@ -40,6 +38,7 @@ services:
         - SPRING_DATASOURCE_PASSWORD=ewm
         - SERVER_PORT=8080
         - STATS-SERVER_URL=http://stats-server:9090
+        - TZ=GMT
 
   ewm-db:
     image: postgres:14-alpine
