--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
-stats-server.url=http://localhost:9090
+stats-server.url=http://stats-server:9090
 
-spring.datasource.url=jdbc:postgresql://localhost:6542/ewm
+spring.datasource.url=jdbc:postgresql://localhost:5432/ewm
 spring.datasource.username=ewm
 spring.datasource.password=ewm
 spring.datasource.driverClassName=org.postgresql.Driver
